--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,12 @@
             <version>1.2.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
     </dependencies>
 
 	<build>
