--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,3 +1,7 @@
+#
+# jdbc.properties
+#
+
 jdbc.driverClassName= com.mysql.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.MySQLDialect
 jdbc.databaseurl=jdbc:mysql://localhost:3306/todos
