--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,11 +2,15 @@
 # log4j.properties
 #
 
+log4j.rootCategory=ERROR, Console
+
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
+log4j.logger.org=ERROR
+
 # Root logger option
-log4j.rootLogger=warning, stdout
+log4j.rootLogger=ERROR, stdout
